--- a/src/pages/bio/[slug].astro
+++ b/src/pages/bio/[slug].astro
@@ -16,7 +16,9 @@ const { Content } = await render(about);
 ---
 
 <Layout title={about.data.title}>
-	<h1>{about.data.title}</h1>
+	<h1 transition:name={about.data.title} transition:animate="initial">
+		{about.data.title}
+	</h1>
 	<div class="-mb-4 flex flex-row flex-wrap justify-between">
 		<!-- <p>Created: <strong>{about.data.created.toDateString()}</strong></p>
 		<p>Updated: <strong>{about.data.updated?.toDateString()}</strong></p> -->
